--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,54 @@
-# This is a basic workflow to help you get started with Actions
+name: Build APK for Pico-4
 
-name: CI
+on: [push]  # Собирать при каждом пуше
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    # 1. Скачать код
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+    # 2. Установить Godot
+    - name: Setup Godot
+      run: |
+        wget https://github.com/godotengine/godot/releases/download/4.2.1-stable/Godot_v4.2.1-stable_linux.x86_64
+        chmod +x Godot_v4.2.1-stable_linux.x86_64
+        mv Godot_v4.2.1-stable_linux.x86_64 godot
+        
+    # 3. Создать настройки экспорта
+    - name: Create export preset
+      run: |
+        cat > export_presets.cfg << 'EOF'
+        [preset.0]
+        name="Android"
+        platform="Android"
+        runnable=true
+        custom_template=""
+        embedded_android_sdk=true
+        architectures/arm64-v8a=true
+        architectures/armeabi-v7a=false
+        export_filter="all_resources"
+        keystore/debug="user://android_debug.keystore"
+        keystore/debug_user="androiddebugkey"
+        keystore/debug_password="android"
+        
+        [preset.0.options]
+        XR/OpenXR/Enabled=true
+        XR/OpenXR/Form Factor="HMD"
+        EOF
+        
+    # 4. Собрать APK
+    - name: Build APK
+      run: |
+        ./godot --headless --export-release "Android" ball-game.apk
+        
+    # 5. Загрузить APK как артефакт
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: Ball-Game-APK
+        path: ball-game.apk
+        retention-days: 7
