--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,69 +1,32 @@
-name: Build Balloon APK
-
+name: Build Test
 on: [push]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Setup Godot
+    - name: Download Godot
       run: |
-        wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
-        unzip -q Godot_v4.1.3-stable_linux.x86_64.zip
+        wget https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
+        unzip Godot_v4.1.3-stable_linux.x86_64.zip
         chmod +x Godot_v4.1.3-stable_linux.x86_64
-        mv Godot_v4.1.3-stable_linux.x86_64 godot
-        
-    - name: Show files before
+    - name: Create project file
       run: |
-        echo "=== ФАЙЛЫ В ПРОЕКТЕ ==="
-        ls -la
-        echo "=== ТЕКСТУРЫ ==="
-        ls -la *.png 2>/dev/null || echo "Нет текстур"
-        
-    - name: Create minimal project
-      run: |
-        # Если нет сцены - создать
-        if [ ! -f "main.tscn" ]; then
-          echo '[gd_scene load_steps=2 format=3]' > main.tscn
-          echo '' >> main.tscn
-          echo '[ext_resource type="Script" path="res://baloon.gd" id="1"]' >> main.tscn
-          echo '' >> main.tscn
-          echo '[node name="Main" type="Node2D"]' >> main.tscn
-          echo 'script = ExtResource("1")' >> main.tscn
-        fi
-        
-        # Создать project.godot
         echo '[application]' > project.godot
-        echo 'config/name="Balloon Game"' >> project.godot
-        echo 'run/main_scene="res://main.tscn"' >> project.godot
-        
-    - name: Build APK (debug mode)
+        echo 'config/name="Test"' >> project.godot
+        echo 'run/main_scene="res://test.tscn"' >> project.godot
+    - name: Create export preset
       run: |
-        # Пробуем debug экспорт
-        ./godot --headless --export-debug "Android" app.apk 2>&1 | tee build.log
-        
-        echo "=== ПРОВЕРКА APK ==="
-        if [ -f "app.apk" ]; then
-          echo "✅ APK создан! Размер: $(du -h app.apk | cut -f1)"
-        else
-          echo "❌ APK не создан! Логи:"
-          cat build.log | tail -50
-        fi
-        
-    - name: Upload APK if exists
-      uses: actions/upload-artifact@v4
-      if: success()
+        echo '[preset.0]' > export_presets.cfg
+        echo 'name="Android"' >> export_presets.cfg
+        echo 'platform="Android"' >> export_presets.cfg
+        echo 'runnable=true' >> export_presets.cfg
+        echo 'embedded_android_sdk=true' >> export_presets.cfg
+    - name: Build
+      run: |
+        ./Godot_v4.1.3-stable_linux.x86_64 --headless --export-debug "Android" test.apk
+        ls -la *.apk
+    - uses: actions/upload-artifact@v3
       with:
-        name: balloon-app
-        path: app.apk
-        
-    - name: Debug info
-      if: failure()
-      run: |
-        echo "=== ПОЛНЫЕ ЛОГИ ==="
-        cat build.log 2>/dev/null || echo "Нет логов"
-        echo "=== СОДЕРЖИМОЕ ФАЙЛОВ ==="
-        head -30 *.gd 2>/dev/null || echo "Нет скриптов"
+        name: test-apk
+        path: test.apk
