--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,39 +4,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
-    - name: Setup Godot
+    - name: Rename texture
       run: |
-        wget https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
-        unzip Godot_v4.1.3-stable_linux.x86_64.zip
-        chmod +x Godot_v4.1.3-stable_linux.x86_64
-        
-    - name: Rename textures (remove spaces)
-      run: |
-        # Убираем пробел из Normal 1.png
+        # Убираем пробел из названия файла
         if [ -f "Normal 1.png" ]; then
           mv "Normal 1.png" Normal1.png
+          echo "✅ Переименовал Normal 1.png → Normal1.png"
         fi
         
-        # Создаем заглушки если нет текстур
-        for tex in Normal1.png Smile1.png Sleep1.png; do
-          if [ ! -f "$tex" ]; then
-            echo "Создаю заглушку для $tex"
-            convert -size 100x100 xc:$(echo $tex | sed 's/Normal1/blue/; s/Smile1/green/; s/Sleep1/red/') "$tex" 2>/dev/null || \
-            echo "Создаю простую текстуру" > "$tex"
-          fi
-        done
-        
-    - name: Create project files
+    - name: Setup Godot
       run: |
+        echo "📦 Устанавливаю Godot 4.1.3..."
+        wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
+        unzip -q Godot_v4.1.3-stable_linux.x86_64.zip
+        chmod +x Godot_v4.1.3-stable_linux.x86_64
+        echo "✅ Godot установлен"
+        
+    - name: Create project config
+      run: |
+        echo "⚙️ Создаю конфигурацию проекта..."
         # project.godot
         echo '[application]' > project.godot
         echo 'config/name="Balloon Game"' >> project.godot
         echo 'run/main_scene="res://node_2d.tscn"' >> project.godot
-        echo '' >> project.godot
-        echo '[rendering]' >> project.godot
-        echo 'renderer/rendering_method="gl_compatibility"' >> project.godot
         
         # export_presets.cfg
         echo '[preset.0]' > export_presets.cfg
@@ -44,14 +36,40 @@ jobs:
         echo 'platform="Android"' >> export_presets.cfg
         echo 'runnable=true' >> export_presets.cfg
         echo 'export_filter="all_resources"' >> export_presets.cfg
+        echo 'custom_template=""' >> export_presets.cfg
         echo 'embedded_android_sdk=true' >> export_presets.cfg
         echo 'architectures/arm64-v8a=true' >> export_presets.cfg
+        echo '' >> export_presets.cfg
+        echo '[preset.0.options]' >> export_presets.cfg
+        echo 'application/package="com.pico.balloon"' >> export_presets.cfg
+        echo 'application/version="1"' >> export_presets.cfg
+        echo 'application/version_code="1"' >> export_presets.cfg
+        echo '✅ Конфигурация создана'
         
     - name: Build APK
       run: |
-        ./Godot_v4.1.3-stable_linux.x86_64 --headless --export-debug "Android" balloon.apk
+        echo "🔨 Собираю APK..."
+        ./Godot_v4.1.3-stable_linux.x86_64 --headless --export-debug "Android" balloon.apk 2>&1 | tee build.log
         
-    - uses: actions/upload-artifact@v3
+        echo "📊 Результат сборки:"
+        if [ -f "balloon.apk" ]; then
+          echo "✅ APK создан успешно! Размер: $(du -h balloon.apk | cut -f1)"
+        else
+          echo "❌ APK не создан! Логи:"
+          tail -50 build.log
+          exit 1
+        fi
+        
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
       with:
         name: balloon-apk
         path: balloon.apk
+        retention-days: 7
+        
+    - name: Show success message
+      if: success()
+      run: |
+        echo "🎉 Сборка завершена успешно!"
+        echo "📥 Скачай APK из раздела Artifacts → balloon-apк"
+        echo "📲 Установи на Pico-4: adb install balloon.apk"
