--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,75 +1,155 @@
 name: Build Balloon APK
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
+    # 1. Скачать код
     - uses: actions/checkout@v4
     
-    - name: Rename texture
+    # 2. Переименовать текстуру (убрать пробел)
+    - name: Fix texture name
       run: |
-        # Убираем пробел из названия файла
         if [ -f "Normal 1.png" ]; then
           mv "Normal 1.png" Normal1.png
-          echo "✅ Переименовал Normal 1.png → Normal1.png"
+          echo "✅ Переименовал: Normal 1.png → Normal1.png"
         fi
         
+    # 3. Скачать Godot
     - name: Setup Godot
       run: |
         echo "📦 Устанавливаю Godot 4.1.3..."
         wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
         unzip -q Godot_v4.1.3-stable_linux.x86_64.zip
         chmod +x Godot_v4.1.3-stable_linux.x86_64
-        echo "✅ Godot установлен"
+        mv Godot_v4.1.3-stable_linux.x86_64 godot
+        echo "✅ Godot готов"
         
-    - name: Create project config
+    # 4. Скачать экспортные шаблоны для Android
+    - name: Download Android templates
       run: |
-        echo "⚙️ Создаю конфигурацию проекта..."
-        # project.godot
-        echo '[application]' > project.godot
-        echo 'config/name="Balloon Game"' >> project.godot
-        echo 'run/main_scene="res://node_2d.tscn"' >> project.godot
+        echo "📥 Скачиваю Android шаблоны..."
+        wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_export_templates.tpz
+        mkdir -p ~/.local/share/godot/export_templates/4.1.3.stable/
+        unzip -q Godot_v4.1.3-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/4.1.3.stable/
+        echo "✅ Шаблоны установлены в: ~/.local/share/godot/export_templates/4.1.3.stable/"
         
-        # export_presets.cfg
-        echo '[preset.0]' > export_presets.cfg
-        echo 'name="Android"' >> export_presets.cfg
-        echo 'platform="Android"' >> export_presets.cfg
-        echo 'runnable=true' >> export_presets.cfg
-        echo 'export_filter="all_resources"' >> export_presets.cfg
-        echo 'custom_template=""' >> export_presets.cfg
-        echo 'embedded_android_sdk=true' >> export_presets.cfg
-        echo 'architectures/arm64-v8a=true' >> export_presets.cfg
-        echo '' >> export_presets.cfg
-        echo '[preset.0.options]' >> export_presets.cfg
-        echo 'application/package="com.pico.balloon"' >> export_presets.cfg
-        echo 'application/version="1"' >> export_presets.cfg
-        echo 'application/version_code="1"' >> export_presets.cfg
-        echo '✅ Конфигурация создана'
+    # 5. Создать обязательные файлы проекта
+    - name: Create project files
+      run: |
+        echo "⚙️ Создаю файлы проекта..."
         
+        # project.godot - ОБЯЗАТЕЛЬНЫЙ файл
+        cat > project.godot << 'EOF'
+[application]
+config/name="Balloon Game"
+config/description="Balloon game for Pico-4"
+run/main_scene="res://node_2d.tscn"
+
+[rendering]
+renderer/rendering_method="gl_compatibility"
+
+[display]
+window/size/width=1920
+window/size/height=1080
+window/size/mode="fullscreen"
+EOF
+        
+        # export_presets.cfg - КОРРЕКТНЫЙ и полный
+        cat > export_presets.cfg << 'EOF'
+[preset.0]
+name="Android"
+platform="Android"
+runnable=true
+export_filter="all_resources"
+include_filter="*"
+exclude_filter=""
+custom_template=""
+embedded_android_sdk=true
+architectures/arm64-v8a=true
+architectures/armeabi-v7a=false
+
+[preset.0.options]
+application/package="com.pico.balloon"
+application/version="1"
+application/version_code="1"
+application/xr_features/openxr=true
+application/graphics/api=1
+xr/openxr/enabled=true
+xr/openxr/form_factor=1
+EOF
+        
+        # icon.svg - простая иконка
+        cat > icon.svg << 'EOF'
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+<circle cx="64" cy="64" r="60" fill="#ff6b6b"/>
+<circle cx="48" cy="48" r="8" fill="#fff"/>
+<circle cx="80" cy="48" r="8" fill="#fff"/>
+<path d="M48 90 Q64 110 80 90" stroke="#fff" stroke-width="6" fill="none"/>
+</svg>
+EOF
+        
+        echo "✅ Файлы проекта созданы"
+        
+    # 6. Создать debug keystore (обязательно для Android)
+    - name: Create debug keystore
+      run: |
+        echo "🔐 Создаю debug keystore..."
+        # Создаём простой keystore (пустой файл, Godot создаст свой)
+        echo "android" > debug.keystore
+        echo "✅ Keystore создан"
+        
+    # 7. Показать что есть
+    - name: List files
+      run: |
+        echo "📁 Содержимое проекта:"
+        ls -la
+        
+    # 8. Собрать APK
     - name: Build APK
       run: |
         echo "🔨 Собираю APK..."
-        ./Godot_v4.1.3-stable_linux.x86_64 --headless --export-debug "Android" balloon.apk 2>&1 | tee build.log
         
-        echo "📊 Результат сборки:"
+        # Экспорт с отладкой
+        ./godot --headless --export-debug "Android" balloon.apk 2>&1 | tee build.log
+        
+        # Проверить результат
         if [ -f "balloon.apk" ]; then
-          echo "✅ APK создан успешно! Размер: $(du -h balloon.apk | cut -f1)"
+          echo "🎉 УСПЕХ! APK создан!"
+          echo "📊 Размер: $(du -h balloon.apk | cut -f1)"
+          echo "📁 Файлы после сборки:"
+          ls -la *.apk
         else
-          echo "❌ APK не создан! Логи:"
-          tail -50 build.log
+          echo "❌ ОШИБКА! APK не создан"
+          echo "📋 Последние 30 строк лога:"
+          tail -30 build.log
+          echo "📋 Полный лог сохранён в build.log"
           exit 1
         fi
         
+    # 9. Загрузить APK как артефакт
     - name: Upload APK
+      if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: balloon-apk
+        name: balloon-game-apk
         path: balloon.apk
         retention-days: 7
         
-    - name: Show success message
+    # 10. Инструкция
+    - name: Success message
       if: success()
       run: |
-        echo "🎉 Сборка завершена успешно!"
-        echo "📥 Скачай APK из раздела Artifacts → balloon-apк"
-        echo "📲 Установи на Pico-4: adb install balloon.apk"
+        echo "========================================"
+        echo "✅ СБОРКА ЗАВЕРШЕНА УСПЕШНО!"
+        echo "========================================"
+        echo "📥 Скачай APK:"
+        echo "   1. Нажми на 'balloon-game-apk' в Artifacts"
+        echo "   2. Скачай ZIP архив"
+        echo "   3. Распакуй → внутри balloon.apk"
+        echo ""
+        echo "📲 Установка на Pico-4:"
+        echo "   adb install balloon.apk"
+        echo "========================================"
