--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,55 +9,40 @@ jobs:
     # 1. Скачать код
     - uses: actions/checkout@v4
     
-    # 2. Переименовать текстуру (убрать пробел)
+    # 2. Переименовать текстуру
     - name: Fix texture name
       run: |
         if [ -f "Normal 1.png" ]; then
           mv "Normal 1.png" Normal1.png
-          echo "✅ Переименовал: Normal 1.png → Normal1.png"
+          echo "✅ Переименовал текстуру"
         fi
         
     # 3. Скачать Godot
     - name: Setup Godot
       run: |
-        echo "📦 Устанавливаю Godot 4.1.3..."
         wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
         unzip -q Godot_v4.1.3-stable_linux.x86_64.zip
         chmod +x Godot_v4.1.3-stable_linux.x86_64
         mv Godot_v4.1.3-stable_linux.x86_64 godot
-        echo "✅ Godot готов"
         
-    # 4. Скачать экспортные шаблоны для Android
-    - name: Download Android templates
+    # 4. Скачать шаблоны
+    - name: Download templates
       run: |
-        echo "📥 Скачиваю Android шаблоны..."
         wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_export_templates.tpz
         mkdir -p ~/.local/share/godot/export_templates/4.1.3.stable/
         unzip -q Godot_v4.1.3-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/4.1.3.stable/
-        echo "✅ Шаблоны установлены в: ~/.local/share/godot/export_templates/4.1.3.stable/"
         
-    # 5. Создать обязательные файлы проекта
+    # 5. Создать файлы проекта
     - name: Create project files
       run: |
-        echo "⚙️ Создаю файлы проекта..."
-        
-        # project.godot - ОБЯЗАТЕЛЬНЫЙ файл
+        # project.godot
         cat > project.godot << 'EOF'
 [application]
 config/name="Balloon Game"
-config/description="Balloon game for Pico-4"
 run/main_scene="res://node_2d.tscn"
-
-[rendering]
-renderer/rendering_method="gl_compatibility"
-
-[display]
-window/size/width=1920
-window/size/height=1080
-window/size/mode="fullscreen"
 EOF
         
-        # export_presets.cfg - КОРРЕКТНЫЙ и полный
+        # export_presets.cfg
         cat > export_presets.cfg << 'EOF'
 [preset.0]
 name="Android"
@@ -69,87 +54,28 @@ exclude_filter=""
 custom_template=""
 embedded_android_sdk=true
 architectures/arm64-v8a=true
-architectures/armeabi-v7a=false
 
 [preset.0.options]
 application/package="com.pico.balloon"
 application/version="1"
 application/version_code="1"
-application/xr_features/openxr=true
-application/graphics/api=1
-xr/openxr/enabled=true
-xr/openxr/form_factor=1
 EOF
         
-        # icon.svg - простая иконка
+        # icon.svg
         cat > icon.svg << 'EOF'
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
 <circle cx="64" cy="64" r="60" fill="#ff6b6b"/>
-<circle cx="48" cy="48" r="8" fill="#fff"/>
-<circle cx="80" cy="48" r="8" fill="#fff"/>
-<path d="M48 90 Q64 110 80 90" stroke="#fff" stroke-width="6" fill="none"/>
 </svg>
 EOF
         
-        echo "✅ Файлы проекта созданы"
-        
-    # 6. Создать debug keystore (обязательно для Android)
-    - name: Create debug keystore
-      run: |
-        echo "🔐 Создаю debug keystore..."
-        # Создаём простой keystore (пустой файл, Godot создаст свой)
-        echo "android" > debug.keystore
-        echo "✅ Keystore создан"
-        
-    # 7. Показать что есть
-    - name: List files
-      run: |
-        echo "📁 Содержимое проекта:"
-        ls -la
-        
-    # 8. Собрать APK
+    # 6. Собрать APK
     - name: Build APK
       run: |
-        echo "🔨 Собираю APK..."
+        ./godot --headless --export-debug "Android" balloon.apk
         
-        # Экспорт с отладкой
-        ./godot --headless --export-debug "Android" balloon.apk 2>&1 | tee build.log
-        
-        # Проверить результат
-        if [ -f "balloon.apk" ]; then
-          echo "🎉 УСПЕХ! APK создан!"
-          echo "📊 Размер: $(du -h balloon.apk | cut -f1)"
-          echo "📁 Файлы после сборки:"
-          ls -la *.apk
-        else
-          echo "❌ ОШИБКА! APK не создан"
-          echo "📋 Последние 30 строк лога:"
-          tail -30 build.log
-          echo "📋 Полный лог сохранён в build.log"
-          exit 1
-        fi
-        
-    # 9. Загрузить APK как артефакт
+    # 7. Загрузить APK
     - name: Upload APK
-      if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: balloon-game-apk
+        name: balloon-apk
         path: balloon.apk
-        retention-days: 7
-        
-    # 10. Инструкция
-    - name: Success message
-      if: success()
-      run: |
-        echo "========================================"
-        echo "✅ СБОРКА ЗАВЕРШЕНА УСПЕШНО!"
-        echo "========================================"
-        echo "📥 Скачай APK:"
-        echo "   1. Нажми на 'balloon-game-apk' в Artifacts"
-        echo "   2. Скачай ZIP архив"
-        echo "   3. Распакуй → внутри balloon.apk"
-        echo ""
-        echo "📲 Установка на Pico-4:"
-        echo "   adb install balloon.apk"
-        echo "========================================"
