--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,78 +4,36 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    # 1. Скачать код
-    - uses: actions/checkout@v4
-    
-    # 2. Переименовать текстуру
-    - name: Fix texture name
-      run: |
-        if [ -f "Normal 1.png" ]; then
-          mv "Normal 1.png" Normal1.png
-          echo "✅ Переименовал текстуру"
-        fi
-        
-    # 3. Скачать Godot
-    - name: Setup Godot
-      run: |
-        wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
-        unzip -q Godot_v4.1.3-stable_linux.x86_64.zip
-        chmod +x Godot_v4.1.3-stable_linux.x86_64
-        mv Godot_v4.1.3-stable_linux.x86_64 godot
-        
-    # 4. Скачать шаблоны
-    - name: Download templates
-      run: |
-        wget -q https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_export_templates.tpz
-        mkdir -p ~/.local/share/godot/export_templates/4.1.3.stable/
-        unzip -q Godot_v4.1.3-stable_export_templates.tpz -d ~/.local/share/godot/export_templates/4.1.3.stable/
-        
-    # 5. Создать файлы проекта
-    - name: Create project files
-      run: |
-        # project.godot
-        cat > project.godot << 'EOF'
-[application]
-config/name="Balloon Game"
-run/main_scene="res://node_2d.tscn"
-EOF
-        
-        # export_presets.cfg
-        cat > export_presets.cfg << 'EOF'
-[preset.0]
-name="Android"
-platform="Android"
-runnable=true
-export_filter="all_resources"
-include_filter="*"
-exclude_filter=""
-custom_template=""
-embedded_android_sdk=true
-architectures/arm64-v8a=true
+      - uses: actions/checkout@v4
 
-[preset.0.options]
-application/package="com.pico.balloon"
-application/version="1"
-application/version_code="1"
-EOF
-        
-        # icon.svg
-        cat > icon.svg << 'EOF'
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
-<circle cx="64" cy="64" r="60" fill="#ff6b6b"/>
-</svg>
-EOF
-        
-    # 6. Собрать APK
-    - name: Build APK
-      run: |
-        ./godot --headless --export-debug "Android" balloon.apk
-        
-    # 7. Загрузить APK
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: balloon-apk
-        path: balloon.apk
+      - name: Setup Godot
+        run: |
+          wget https://github.com/godotengine/godot/releases/download/4.1.3-stable/Godot_v4.1.3-stable_linux.x86_64.zip
+          unzip Godot_v4.1.3-stable_linux.x86_64.zip
+          chmod +x Godot_v4.1.3-stable_linux.x86_64
+
+      - name: Fix texture name
+        run: |
+          if [ -f "Normal 1.png" ]; then
+            mv "Normal 1.png" Normal1.png
+          fi
+
+      - name: Create project config
+        run: |
+          echo '[application]' > project.godot
+          echo 'run/main_scene="res://node_2d.tscn"' >> project.godot
+
+          echo '[preset.0]' > export_presets.cfg
+          echo 'name="Android"' >> export_presets.cfg
+          echo 'platform="Android"' >> export_presets.cfg
+          echo 'runnable=true' >> export_presets.cfg
+
+      - name: Build APK
+        run: |
+          ./Godot_v4.1.3-stable_linux.x86_64 --headless --export-debug "Android" game.apk
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: balloon-game
+          path: game.apk
